@@ -1,7 +1,3 @@
-- gtkdoc for im_profile() next
-
-
-
 
 
 - nip2-7.22.3 on Windows is not adding the path you load from to the set of
