@@ -43,6 +43,7 @@
 - add IM_SWAP
 - dilate/erode do (!=0) on non-uchar images
 - add multipass Orc to im_conv(), 3.5x faster for 5x5 mask
+- im_profile() works for any image format, any number of bands
 
 12/5/10 started 7.22.2
 - the conditional image of ifthenelse can be any format, a (!=0) is added if
